<resources>
    <string name="app_name">Challenge Camera</string>
    <string name="addChallengeList">챌린지 추가</string>
    <string name="addChallengeName">챌린지 이름</string>
    <string name="addChallengeKind">카운트 방식</string>
    <string name="addChallengeNameHint">최대 10글자(수정불가)</string>
    <string name="addChallengeStartDate">시작할 날짜</string>
    <string name="addChallengeEndDate">종료할 날짜</string>
    <string name="addChallengeTime">챌린지 알림</string>
    <string name="addChallengeDatePick">날짜 설정</string>
    <string name="addChallengeTimePick">시간 설정</string>
    <string name="addChallengeHide">챌린지 사진을 갤러리에서 숨김(수정불가)</string>

    <string name="alarmOnMessage">알림 켜짐</string>
    <string name="alarmOffMessage">알림 꺼짐</string>
    <string name="hideOnMessage">사진 숨김</string>
    <string name="hideOffMessage">사진 공개</string>
</resources>